@@ -115,6 +115,7 @@ Improvements:
     * eina, evas: improved support for 64bits system.
     * Evas GL engine downscale quality in smooth mode much improved with multisampling up to effectively 16x16 via shaders.
     * eina: eina_strlcat now work with a NULL source.
+    * Evas textblock: Added proper size adjustments for "high" shaped texts.
 
 Fixes:
     * Fix a memory leak in ecore_con_dns when using ecore_con_server_connect
